# project-api-2025

./: .gitignore  Cargo.toml  README.md
backend/: index.js  package-lock.json  package.json  start-server.js
backend/dao/: fileDAO.js
backend/db/: database.db  db_init.py  fileDB.js
backend/routes/: filesRoutes.js  listRoutes.js  mkdirRoutes.js  statsRoutes.js
frontend/: Cargo.toml
frontend/src/: fileApi.rs  file_api.rs  fs.rs  fuse_linux.rs  fuse_mac.rs  fuse_windows.rs  lib.rs  main.rs
