[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow= "1"
fuser015={package = "fuser", version = "0.15.1", optional = true}
fuser016={package = "fuser", version = "0.16.0", optional = true}
winfsp={ version = "0.12.0", optional = true }
winfsp-sys = { version = "0.12.0+winfsp-2.1", optional = true }
widestring = "1.2.0"
libc = "0.2.177"
ctrlc = "3.5.1"
nix = { version = "0.30", features = ["user"], optional = true }
d = "0.0.1"
urlencoding = "2.1.3"
dirs = "6.0.0"
chrono = "0.4.42"
serde-aux = "4.7.0"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"

[features]
default = []
macos=["fuser015"]
linux=["fuser016", "nix"]
windows=["winfsp", "winfsp-sys"]
