[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2.178"
ctrlc = "3.5.1"
urlencoding = "2.1.3"
dirs = "6.0.0"
chrono = "0.4.42"
serde-aux = "4.7.0"
rust_socketio = "0.6.0"
widestring = "1.2.0"
signal-hook = "0.3"


#############################################
# UNIX (Linux + macOS)
#############################################

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.30", features = ["user"] }

#############################################
# Linux
#############################################

[target.'cfg(target_os = "linux")'.dependencies]
fuser016 = { package = "fuser", version = "0.16.0" }

#############################################
# macOS
#############################################

[target.'cfg(target_os = "macos")'.dependencies]
fuser015 = { package = "fuser", version = "0.15.1", features = ["abi-7-23"] }

#############################################
# Windows
#############################################

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8.0"
winapi = { version = "0.3", features = ["wincon"] }
winfsp = "0.12.0"
winfsp-sys = "0.12.0+winfsp-2.1"

